[package]
name = "pyproj"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Rose <joshuarose@gmx.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
termcolor = "1.4.0"
